[package]
name = "lkml-reader"
version = "0.1.0"
edition = "2021"
description = "A Rust-based interactive reader for the Linux Kernel Mailing List (lore.kernel.org)"
license = "GPL-2.0"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
flate2 = "1"

[profile.release]
lto = "thin"
opt-level = 3
