[package]
name = "lkml-reader"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
description = "Interactive TUI reader for kernel.org public-inbox mailing lists."

[[bin]]
name = "lkml-reader"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
lkml-core = { path = "vendor/lkml-core" }

[profile.release]
lto = "thin"
opt-level = 3
